--- a/src/main/resources/static/css/test.css
+++ b/src/main/resources/static/css/test.css
@@ -1,92 +1,3 @@
-body {
-    background-color: #F2F2EB;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
-
-.header {
-    height: 11.2vh;
-    background: #F2E3B3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 2.083vw;
-    padding-left: 4.166vw;
-}
-.logo1 {
-    width: 6.25vw;
-    height: 10vh;
-    top: 0.3vw;
-}
-
-.search-form {
-    display: flex;
-    align-items: center;
-    gap: 0.53vw;
-    padding-left: 1.0415vw;
-    background: #FBEFC7;
-    border-radius: 2.778vh;
-}
-
-.search-form input, .inner-window input {
-    height: 6.19vh;
-    width: 41.67vw;
-    margin-left: 1vw;
-    margin-top: 0.2vh;
-    flex: 1;
-    border: none;
-    background: #FBEFC7;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.5vh;
-    font-size: 2.5vw;
-    border-radius: 5.5vh;
-    outline: none;
-}
-
-.magnifier{
-    height: 3.3333333333vh;
-    width: 1.875vw;
-}
-
-.button-style {
-    display: flex;
-    background-color: #3E5902;
-    height: 5.7407vh;
-    width: 6.4640625vw;
-    border-radius: 2.778vh;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vh;
-    font-size: 1.25vw;
-    text-decoration: none;
-}
-
-.heart, .user {
-    width: 3.6458vw;
-    height: 5.5555vh;
-}
-
-.heart-container, .user-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-}
-
-.user-container:hover, .heart-container:hover {
-    background-color: #733506;
-    width: 4.6vw;
-    height: 9.2593vh;
-}
-.home{
-    height: 5.55555555vh;
-    width: 3.125vw;
-}
-/*____________________________________________________________________________________________________________________*/
-
 .container {
     display: flex;
     justify-content: space-between;
@@ -94,554 +5,322 @@ body {
 }
 
 .menu {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: 4vw;
-    margin-top: 1vh;
+    margin-left: 1.9vw;
+    margin-top: 2.5vh;
     margin-right: 1.7vw;
+    z-index: 1;
 }
 
 .h1 {
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.4vw; /*42*/
-    font-size: 3.9vh;
+    font-size: 2.1875vw; /*42*/
     color: #733506;
     position: absolute;
-    margin-left: 5.4vw;
-    margin-top: 1vh;
-
+    left: 1.979167vw;
+    bottom: 0.2605vh;
+    margin-bottom: 44.25vh;
 }
 
-.boardTwoTitle{
-    position: absolute;
+
+.boardOneTitle {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2vw; /*42*/
     color: #733506;
     width: 3vw;
     height: 4vh;
-    margin-left: 6.1vw;
-    margin-top: 16.5vh;
-
-}
-
-.ulBoard {
-    position: absolute;
-    top: 33.5vh;
-    height: 37vh;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.66667vw;
-    font-size: 2.963vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding-left: 0.2605vw;
-    margin-top: 0.1vh;
-    margin-left: 1.7vw;
-
-}
-
-ul {
-    padding-left: 0.2605vw;
-    margin-left: 0.521vw;
-}
-
-ul li {
-
-    list-style: none;
-    padding-left: 0.2605vw;
-    margin-left: 0.2vw;
-    margin-right: 2vw;
-    margin-top: 0.7vh;
-}
-
-ul li:hover {
-    background-color: #F2B705;
-    border-radius: 5.5vw;
-    height: 5vh;
-    width: 9vw;
-} /*hover for menu list elements*/
-
-ul hr {
-    border: 0.104167vw solid black;
-    margin: 0.520834vw ;
-    margin-left: 0.5vw;
-    margin-right: 0.6vw;
+    margin-left: 2.7vw;
+    margin-top: -63.5vh;
+    z-index: 5;
 }
 
 /*____________________________________________________________________________________________________________________*/
-.ulBoard::-webkit-scrollbar {
+.ulBoard::-webkit-scrollbar, ::-webkit-scrollbar {
     width: 0.78125vw;
-    margin-left: 5vw;
 }
 
 .ulBoard::-webkit-scrollbar-track {
     margin-top: 2.7778vh;
     border: 0.0520834vw solid black;
-    border-radius: 50px;
-    background: #F2E3B3;
-    margin-left: 0.6vw;
-}
-
-.ulBoard::-webkit-scrollbar-thumb {
-    background: #733506;
-    border-radius: 50px;
-}
-
-.fieldForCategory{
-    width: 12.5vw; /*240*/
-    height:66.67vh; /*720*/
-    margin-right: 2.344vw;
-}
-
-.categoriesI{
-    width:1.5625vw;/*30*/
-    height:2.78vh;/*30*/
-}
-
-.timeI{
-    width: 1.5625vw;/*30*/
-    height:2.963vh;/*32*/
-}
-
-.alphabetI{
-    width: 1.5625vw;/*30*/
-    height:1.574vh;/*17*/
-}
-.ratingI{
-    width: 1.5625vw;/*30*/
-    height: 1.4vh;/*15*/
-}
-
-.ingredientsI{
-    width:1.5625vw;/*30*/
-    height:2.78vh;/*30*/
-}
-
-.devicesI{
-    width:1.5625vw;/*30*/
-    height:2.78vh;/*30*/
-}
-/*____________________________________________________________________________________________________________________*/
-
-.DropDownIcon{
-    position: absolute;
-    width: 1.5vw;/*30*/
-    height:1.5vh;/*17*/
-    top: 4.5vh;
-    margin-left: 0.4vw;
-}
-.DropDownIconTime{
-    position: absolute;
-    top: 10.2vh;
-    margin-left: 9.4vw;
-}
-
-.DropDownIconAlphabet{
-    position: absolute;
-    top: 16vh;
-    margin-left: 9.4vw;
-}
-
-.DropDownIconRating{
-    position: absolute;
-    top: 21.7vh;
-    margin-left: 9.4vw;
-}
-
-.DropDownIconIngredients{
-    position: absolute;
-    top: 27.5vh;
-    margin-left: 9.4vw;
-}
-
-.DropDownIconDevices{
-    position: absolute;
-    top: 33.1vh;
-    margin-left: 9.4vw;
-}
-/*____________________________________________________________________________________________________________________*/
-
-.board{
-    width: 18vw; /*280*/
-    height:76vh; /*820*/
-    margin-top: 3.5vh;
-}
-
-.bean {
-    position: absolute;
-    width: 2vw;/*35*/
-    height: 4.8vh;/*45*/
-    left: 8vw;
-    top: 82vh;
-}
-/*____________________________________________________________________________________________________________________*/
-.substance{
-    width: 2.65625vw;
-    height:5.5556vh;
-}
-
-.Main-Dish{
-    width: 2.05vw;
-    height:2.7vh;
-}
-
-.saladI{
-    width: 2.0833vw;
-    height:4.167vh;
-}
-.pastryI{
-    width: 2.34375vw;
-    height: 3.24075vh;
-}
-
-.dessertI{
-    width: 2.34375vw;
-    height: 3.24075vh;
-}
-
-.smoothieI{
-    width: 2.34375vw;
-    height: 4.1667vh;
-}
-.snackI{
-    width: 2.34375vw;/*45*/
-    height: 2.7778vh;/*30*/
-}
-
-.fish{
-    width: 2.34375vw;
-    height: 3.24075vh; /*35*/
-}
-
-.sauceI{
-    width: 1.927084vw;
-    height: 4.3518vh; /*37*/
-}
-
-.hidden {
-    display: none;
-}
-
-/*____________________________________________________________________________________________________________________*/
-.apply-button {
-    position: absolute;
-    left: 4.6875vw;
-    bottom: 22vh;
-    background-color: #733506;
-    color: #F2E3B3;
-    border-radius: 2.7vw;
-    padding: 0.19vw;
-    width: 8.4375vw;
-    height: 4.2593vh;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 4.2593vh;
-    border: none;
-    cursor: pointer;
-    outline: none;
-}
-
-.apply-button span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.apply-button:hover {
-    background-color: transparent;
-    border: 0.5vh solid #733506;
-    color: #733506;
-}
-
-/*____________________________________________________________________________________________________________________*/
-.field {
-    position: absolute;
-    width: 80vw;
-    height: 76vh;
-    right: 2vw;
-    top: 14.6vh;
-    bottom: 8vh;
-    border-radius: 5.5vh;
-    background-color: #F2E3B3;
-}
-
-.ol{
-    position: absolute;
-    width: 80vw;
-    height: 76vh;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.66667vw;
-    font-size: 2.963vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding-left: 0.2605vw;
-    margin-top: 1vh;
-    overflow: auto;
-}
-.ol ol {
-    list-style-type: none;
-}
-
-.ol::-webkit-scrollbar {
-    width: 0.78125vw;
-    margin-right: 5vw;
-}
-
-.ol::-webkit-scrollbar-track {
-    margin-top: 2.7778vh;
-    border: 0.0520834vw solid black;
-    border-radius: 50px;
+    border-radius: 4.63vh;
     background: #F2E3B3;
     margin-left: 0.5vw;
 }
 
-.ol::-webkit-scrollbar-thumb {
+.ulBoard::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb {
     background: #733506;
-    border-radius: 50px;
+    border-radius: 4.63vh;
 }
 
-.ol-scrollbar{
+::-webkit-scrollbar-thumb {
+    background-color: #B90F0F;
+}
+
+::-webkit-scrollbar-track {
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    border-radius: 4.63vh;
+}
+
+.board {
+    width: 14.584vw; /*280*/
+    height: 75.926vh; /*820*/
+    margin-right: 2.5vw;
+    margin-top: 1vh;
+}
+
+.fieldForCategory {
+    width: 12.5vw; /*240*/
+    height: 66.67vh; /*720*/
+    margin-right: 2.344vw;
+}
+
+.First-Dish, .Fish-Dish, .Main-Dish, .Salad, .Sauce, .Snack, .Pastry, .Drink, .Dessert {
+    width: 2.22vw;
+    height: 4vh;
+    left: 0.2vw;
+}
+
+.First-Dish {
+    position: relative;
+    top: 0.6vh;
+}
+
+.Main-Dish {
+    position: relative;
+    top: 0.9vh;
+    left: 0.2vw;
+}
+
+.Salad {
+    position: relative;
+    top: 0.1vh;
+    left: 0.2vw;
+}
+
+.Pastry {
+    position: relative;
+    top: 0.6vh;
+    left: 0.2vw;
+}
+
+.Dessert {
+    position: relative;
+    top: 0.8vh;
+    left: 0.2vw;
+}
+
+.Drink {
+    position: relative;
+    top: 0.35vh;
+}
+
+.Fish-Dish {
+    position: relative;
+    top: 0.35vh;
+    left: 0.2vw;
+}
+
+.Snack {
+    position: relative;
+    top: 0.35vh;
+    left: 0.2vw;
+}
+
+.Sauce {
+    position: relative;
+    top: 0.6vh;
+    left: 0.2vw;
+}
+
+.bean {
     position: absolute;
-    right: 5vw;}
+    width: 2vw; /*35*/
+    height: 4.8vh; /*45*/
+    left: 6.3vw;
+    top: 69vh;
+}
 
-.h2{
+a:link, a:visited {
+    text-decoration: none;
+}
+
+.cheesecake {
     position: absolute;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.4vw; /*42*/
-    font-size: 3.8889vh;
-    color: #733506;
-    left: 1.6vw;
-    margin-bottom: 0.5vh;
-    margin-top: 2vh;
+    left: 18.4375vw;
+    top: 54.1vh;
+    border-radius: 13.8vh 13.8vh 7.8vh 7.8vh;
+    z-index: 1;
+    width: 13.17vw;
+    height: 36.1vh;
+    margin-right: 2.344vw;
 }
 
-.h2-down{
-    margin-right: 1.6vw;
-    margin-top: 7.5vh;
-}
-
-.h2-down-right{
-    margin-top: 0vh;
-    margin-left: 1.6vw;
-}
-
-.smallerField{
+.fresh {
     position: absolute;
-    width: 74vw;
-    height: 14vh;
-    right: 4vw;
-    top: 4vh;
-    bottom: 8vh;
-    border-radius: 5.5vh;
-    background-color: #FBEFC7;
-}
-.smallerField-down1{
-    top: 22vh;
-}
-.smallerField-down2{
-    top: 40vh;
-}
-.smallerField-down3{
-    top: 58vh;
-}
-.smallerField-down4{
-    top: 76vh;
-    bottom: 4vh;
-}
-/*____________________________________________________________________________________________________________________*/
-.footer {
-    position: fixed;
-    width: 100%;
-    height: 5.6vh;
-    top: 94.4vh;
-    bottom: 0;
-    background-color: #3E5902;
-    color: #F2E3B3;
-    padding: 1.4vh;
-    display: flex;
-    left: 0;
-    justify-content: space-between;
-    z-index: 5;
+    left: 33.6875vw;
+    top: 54.1vh;
+    border-radius: 13.8vh 13.8vh 7.8vh 7.8vh;
+    width: 13.17vw;
+    height: 36.1vh;
+    margin-right: 2.344vw;
 }
 
-
-#send-button {
+.seafoodSalad {
     position: absolute;
-    right: 4.6875vw;
-    width: 9.0105vw;
-    height: 4.2593vh;
-    background-color: #3E5902;
-    border-radius: 2.7vw;
+    left: 48.9175vw;
+    top: 54.1vh;
+    border-radius: 13.8vh 13.8vh 7.8vh 7.8vh;
+    width: 13.17vw;
+    height: 36.1vh;
+    margin-right: 2.344vw;
+}
+
+.firstDish {
+    position: absolute;
+    left: 18.4375vw;
+    top: 14.815vh;
+    height: 35.1851vh;
+    width: 43.69vw;
+    margin-right: 2.344vw;
+    border-radius: 5.5vh 5.5vh 7.8vh 7.8vh;
+}
+
+.mainDish {
+    position: absolute;
+    left: 63.931vw;
+    top: 14.815vh;
+    height: 75.926vh;
+    width: 31.25vw;
+    margin-left: 2.344vw;
+    border-radius: 8.3vh 8.3vh 7.8vh 7.8vh;
+}
+
+.rectangle {
+    position: absolute;
+    width: 13.17vw;
+    height: 6.0185185185vh;
+    top: 84.5vh;
+    margin-right: 2.344vw;
+    border-radius: 0 0 7.8vh 7.8vh;
+    background: #F2E3B3;
+    z-index: 2;
     text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
-    font-size: 1.25vw;
-    color: #FBEFC7;
-    border: none;
-    top: 37.04vh;
-    bottom: 1.4815vh;
-    z-index: 15;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.1875vw;
+    color: black;
 }
 
-#send-button:hover {
-    background-color: #FBEFC7;
-    color: #3E5902;
-    border: 0.46vh solid #3E5902;
+.rectangle-left-1 {
+    left: 18.4375vw;
 }
 
-#overlay {
+.dessert:hover .cheesecake, .dessert:hover .rectangle-left-1 {
+    border: 0.46vh solid #733506;
+}
+
+.rectangle-left-2 {
+    left: 33.6875vw;
+}
+
+.drink:hover .fresh, .drink:hover .rectangle-left-2 {
+    border: 0.46vh solid #733506;
+}
+
+.rectangle-left-3 {
+    left: 48.9175vw;
+}
+
+.salad:hover .seafoodSalad, .salad:hover .rectangle-left-3 {
+    border: 0.46vh solid #733506;
+}
+
+.rectangleFD {
+    position: absolute;
+    height: 7vh;
+    width: 43.69vw;
+    top: 43vh;
+    margin-right: 2.344vw;
+    border-radius: 0 0 7.8vh 7.8vh;
+    background: #F2E3B3;
+    z-index: 2;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre', serif;
+    left: 18.4375vw;
+    font-size: 2.1875vw;
+    color: black;
+}
+
+.firstD:hover .rectangleFD, .firstD:hover .firstDish {
+    border: 0.46vh solid #733506;
+}
+
+.rectangleMD {
+    position: absolute;
+    height: 7vh;
+    width: 31.25vw;
+    top: 83.70vh;
+    left: 66.275vw;
+    margin-right: 2.344vw;
+    border-radius: 0 0 7.8vh 7.8vh;
+    background: #F2E3B3;
+    z-index: 2;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.1875vw;
+    color: black;
+}
+
+.mainD:hover .rectangleMD, .mainD:hover .mainDish {
+    border: 0.46vh solid #733506;
+}
+
+#overlay-user {
     position: fixed;
     display: none;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 10;
 }
 
-.window {
-    position: fixed;
-    display: none;
-    bottom: 9.2593vh;
-    left: 9.6vh;
-    width: 59.375vw;
-    height: 43.056vh;
-    background: #F2E3B3;
-    padding: 0.02vw;
-    z-index: 11;
-    border-radius: 5.5vh;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.inner-window {
-    background: #FBEFC7;
-    position: absolute;
-    width: 55.2083vw;
-    height: 31.945vh;
-    left: 2.1354167vw;
-    top: 3.5185vh;
-    padding-left: 0.01vw;
-    border-radius: 2.25vh;
-    z-index: 13;
-}
-
-.support-button {
-    position: relative;
-    left: 4.6875vw;
-    bottom: 0.6481vh;
-    background-color: #F2E3B3;
-    color: #733506;
-    border-radius: 2.7vw;
-    padding: 0.19vw;
-    width: 8.4375vw;
-    height: 4.2593vh;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 4.2593vh;
-    border: none;
+.item {
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.5vw;
+    padding-left: 0.2605vw;
+    margin-left: 1.5vw;
     cursor: pointer;
-    outline: none;
 }
 
-.support-button span {
+.item a {
+    color: black;
+    display: block;
+    line-height: 3.7vh;
+}
+
+.item a:hover {
+    background-color: #F2B705;
+    border-radius: 2vh;
+    width: 9.95vw;
+}
+
+hr {
+    border: 0.09vw solid black;
+    width: 9.3vw;
+    margin-right: 0.5vw;
+    margin-left: 2vw;
+}
+
+.ulBoard {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.support-button:hover {
-    background-color: transparent;
-    border: 0.5vh solid #F2E3B3;
-    color: #F2E3B3;
-}
-
-#feedback-input {
-    width: 100%;
-    height: 100px;
-    border: none;
-    padding: 10px;
-    box-sizing: border-box;
-}
-
-.circle-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F2E3B3;
-    border-radius: 50%;
-    width: 2.4vw;
-    height: 5vh;
-    bottom: 1vh;
-}
-
-.telegram-container {
-    right: 5vw;
-}
-
-.instagram-container {
-    right: 3vw;
-}
-
-.telegram {
-    width: 2.39583vw;
-    height: 4.2592vh;
-}
-
-.instagram{
-    width: 2.3vw;
-    height: 4.06vh;
-}
-
-.telegram-container:hover, .instagram-container:hover {
-    background-color: #733506;
-}
-.copyright {
-    position: static;
-    width: 21vw;
-    height: 3vh;
-    margin: auto;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 1vh;
-    text-align: left;
-    color: #F2E3B3;
-}
-
-
-.copyrightm {
-    position: absolute;
-    left: 240px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-
-    color: #000000;
-}
-
-.copyrightf {
-    position: absolute;
-    left: 410px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-    color: #000000;
+    top: 19vh;
+    height: 45vh;
+    font-size: 1.66667vw;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
