--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -90,11 +90,11 @@
             <select name="query">
                 <option disabled selected value="">Choose category</option>
                 <option th:each="categor : ${category}" th:text="${categor}"
-                        th:value="${category}"></option>
+                        th:value="${categor}"></option>
             </select>
         </div>
     </form>
-
+    <!--TODO-->
     <form class="ingredientsField">
         <div class="tableContainer">
             <table id="ingredientsTable">
@@ -118,7 +118,7 @@
         </div>
         <button class="addRow" id="addIngredient">Add</button>
     </form>
-
+    <!--TODO-->
     <form class="devicesField">
         <div class="tableContainer">
             <table id="devicesTable">
