sign in form fix

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -83,7 +83,7 @@
         <div id="overlay-user" onclick="hideOverlay()"></div>
         <div class="login-window" id="popup-login-window">
             <button class="login-heading" id="LoginTab" onclick="showTab('login')">Log in</button>
-            <button class="signUp-heading" id="SignUpTab" onclick="showTab('signUp')">Sign in</button>
+            <button class="signUp-heading" id="SignUpTab" onclick="showTab('signUp')">Sign up</button>
 
             <form autocomplete="off" class="form-container active" id="loginForm" method="post"
                   onsubmit="return submitForm()" th:action="@{api/auth/login}">
