--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Recipe Creation</title>
@@ -71,84 +71,85 @@
 </header>
 <main>
     <div class="title">Create a recipe</div>
+    <form method="post" th:action="@{/api/newRecipe}">
+        <div class="text-form-title">
+            <div class="recipeTitle">
+                <input name="title" placeholder="Recipe title" th:value="${recipe.title}" type="text">
+            </div>
+        </div>
 
-    <form class="text-form-title">
-        <div class="recipeTitle">
-            <input name="title" placeholder="Recipe title" th:value="${recipe.title}" type="text">
+        <div class="text-form-time">
+            <div class="recipeCookingTime">
+                <input id="cookingTimeInput" min="1" name="cookingTime" placeholder="Cooking time in minutes"
+                       th:value="${recipe.cookingTime}" type="number">
+            </div>
         </div>
-    </form>
 
-    <form class="text-form-time">
-        <div class="recipeCookingTime">
-            <input id="cookingTimeInput" min="1" name="cookingTime" placeholder="Cooking time in minutes"
-                   th:value="${recipe.cookingTime}" type="number">
+        <div class="text-form-category">
+            <div class="recipeCategory">
+                <select name="query">
+                    <option disabled selected value="">Choose category</option>
+                    <option th:each="categor : ${category}" th:text="${categor}"
+                            th:value="${categor}"></option>
+                </select>
+            </div>
         </div>
-    </form>
+        <!--TODO-->
+        <div class="ingredientsField">
+            <div class="tableContainer">
+                <table id="ingredientsTable">
+                    <tbody>
+                    <tr>
+                        <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
+                        <td><input name="amount" placeholder="Amount" type="text"></td>
+                        <td>
+                            <button class="deleteRow">Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
+                        <td><input name="amount" placeholder="Amount" type="text"></td>
+                        <td>
+                            <button class="deleteRow">Delete</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <button class="addRow" id="addIngredient">Add</button>
+        </div>
+        <!--TODO-->
+        <div class="devicesField">
+            <div class="tableContainer">
+                <table id="devicesTable">
+                    <tbody>
+                    <tr>
+                        <td><input name="device" placeholder="Device" type="text"></td>
+                        <td>
+                            <button class="deleteRow">Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input name="device" placeholder="Device" type="text"></td>
+                        <td>
+                            <button class="deleteRow">Delete</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <button class="addRow" id="addDevice">Add</button>
+        </div>
 
-    <form class="text-form-category">
-        <div class="recipeCategory">
-            <select name="query">
-                <option disabled selected value="">Choose category</option>
-                <option th:each="categor : ${category}" th:text="${categor}"
-                        th:value="${categor}"></option>
-            </select>
-        </div>
-    </form>
-    <!--TODO-->
-    <form class="ingredientsField">
-        <div class="tableContainer">
-            <table id="ingredientsTable">
-                <tbody>
-                <tr>
-                    <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
-                    <td><input name="amount" placeholder="Amount" type="text"></td>
-                    <td>
-                        <button class="deleteRow">Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
-                    <td><input name="amount" placeholder="Amount" type="text"></td>
-                    <td>
-                        <button class="deleteRow">Delete</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <button class="addRow" id="addIngredient">Add</button>
-    </form>
-    <!--TODO-->
-    <form class="devicesField">
-        <div class="tableContainer">
-            <table id="devicesTable">
-                <tbody>
-                <tr>
-                    <td><input name="device" placeholder="Device" type="text"></td>
-                    <td>
-                        <button class="deleteRow">Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td><input name="device" placeholder="Device" type="text"></td>
-                    <td>
-                        <button class="deleteRow">Delete</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <button class="addRow" id="addDevice">Add</button>
-    </form>
-
-    <form class="text-form-StepByStep">
-        <div class="recipeStepByStep">
+        <div class="text-form-StepByStep">
+            <div class="recipeStepByStep">
             <textarea name="description" placeholder="Step by step instructions"
                       th:value="${recipe.description}"></textarea>
+            </div>
         </div>
-    </form>
 
-    <button class="saveButton" id="save-btn">Save</button>
+        <button class="saveButton" id="save-btn">Save</button>
+    </form>
     <button class="publishButton">Publish</button>
 </main>
 <footer class="footer">
