added notes to user page

--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -178,22 +178,37 @@
     height: 13.15vh;
     background-color: #FBEFC7;
     border-radius: 5vh;
+    text-decoration: none;
+    color: black;
 }
 
-.testForSwitch {
+.testForSwitch, .testForSwitch2 {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.1875vw;
-    top: 1vh;
-    left: 4vw;
+    font-size: 1.8vw;
+    top: 2vh;
+    left: 6vw;
 }
 
 .testForSwitch2 {
-    position: absolute;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.1875vw;
-    top: 5vh;
-    left: 4vw;
+    top: 7vh;
+}
+
+.spacer {
+    margin-right: 0.8vw;
+}
+
+.recipeInfoContainer {
+    display: flex;
+    align-items: center;
+}
+
+.Dessert, .Main-Dish, .First-Dish, .Salad, .Sauce, .Drink, .Snack, .Pastry, .Fish-Dish {
+    margin-top: 3.5vh;
+    position: relative;
+    left: -1vw;
+    width: 8vw;
+    height: 6vh;
 }
 
 .publishBlocked {
@@ -217,24 +232,12 @@
     cursor: not-allowed;
 }
 
-.userRecipeField2 {
-    top: 16.48vh;
-}
-
-.userRecipeField3 {
-    top: 32.96vh;
-}
-
 .recipeIcon {
     position: absolute;
     height: 8vh; /*3.7*/
     width: 5.6vw; /*2.6*/
     right: 3vw;
     top: 2.5vh;
-}
-
-.userRecipeField4 {
-    top: 49.46vh;
 }
 
 .moderation {
