--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -104,7 +104,7 @@
 <main>
     <!-- <img alt="recipeIcon" class="recipeIcon" src="../../images/Recipe.svg" th:src="@{../images/Recipe.svg}">-->
     <div class="RecipeTitle" th:text="${recipe.getTitle()}"></div>
-    <div class="RecipeRating">
+    <div class="RecipeRating" th:if="${recipe.isPublished()} == true">
         <a th:href="@{/allRecipes(rating=${recipe.getAverageMark()})}">
             <p class="num" th:text="${recipe.getAverageMark()}">8.8</p>
         </a>
@@ -152,8 +152,9 @@
         </button>
     </div>
 
-    <button class="Report" id="report-btn" th:if="${isModerator} == false">Report</button>
-    <div th:if="${isLogin} == true AND ${isModerator} == false">
+    <button class="Report" id="report-btn" th:if="${isModerator} == false AND ${recipe.isPublished()} == true">Report
+    </button>
+    <div th:if="${isLogin} == true AND ${isModerator} == false AND ${recipe.isPublished()} == true">
         <div id="overlay-report" onclick="hideOverlay()"></div>
         <form class="report-container" id="report-field-popup-window" method="post"
               onsubmit="return validateInput('reportInput')" th:action="@{/api/newUserReport/{id1}(id1=${id})}"
@@ -167,7 +168,7 @@
             <button class="send-report" id="send-report-btn">Send a report</button>
         </form>
     </div>
-    <div th:if="${isLogin} == false AND ${isModerator} == false">
+    <div th:if="${isLogin} == false AND ${isModerator} == false AND ${recipe.isPublished()} == true">
         <button class="Report" id="report-btn1" onclick="showAlert('Please, log in to report')">Report</button>
     </div>
 
@@ -208,14 +209,15 @@
         </div>
     </div>
     <form class="text-form" method="post" onsubmit="return validateInput('commentInput')"
-          th:action="@{/api/newComment/{id1}(id1=${id})}" th:if="${isModerator} == false"
+          th:action="@{/api/newComment/{id1}(id1=${id})}"
+          th:if="${isModerator} == false AND ${recipe.isPublished()} == true"
           th:object="${comment}">
         <img alt="quill" class="quill" src="../../static/images/quill.svg" th:src="@{../images/quill.svg}">
         <textarea id="commentInput" maxlength="255" name="startWith" placeholder="Add comment"
                   th:field="${comment.text}"></textarea>
         <button id="publish" type="submit">Publish</button>
     </form>
-    <div class="commentField">
+    <div class="commentField" th:if="${recipe.isPublished()} == true">
         <div th:class="'comment-container comment' + ${commentStat.count}"
              th:each="comment, commentStat : ${recipe.getComments()}">
             <div class="comment-user-circle">
@@ -254,7 +256,7 @@
             <div class="amountContent" th:utext="${recipe.getDescription()}"></div>
         </div>
     </div>
-    <div class="addRatingField" th:if="${isModerator} == false">
+    <div class="addRatingField" th:if="${isModerator} == false AND ${recipe.isPublished()} == true">
         <div class="ratingField">
             <div class="star-icon">
                 <input id="1" name="rating" type="radio">
