--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -174,12 +174,17 @@
 
 .userRecipeField {
     position: absolute;
-    width: 51vw;
+    width: 50.8vw;
     height: 13.15vh;
     background-color: #FBEFC7;
     border-radius: 5vh;
     text-decoration: none;
     color: black;
+    margin-bottom: 3vh;
+}
+
+.userRecipeField:hover {
+    border: 0.3vh solid #D8C89A;
 }
 
 .testForSwitch, .testForSwitch2 {
@@ -281,7 +286,8 @@
     border: none;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    cursor: pointer;
 }
 
 .list-container {
