added 1 recipe to database

--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -173,7 +173,7 @@
 }
 
 .userRecipeField {
-    position: absolute;
+    box-sizing: border-box;
     width: 50.8vw;
     height: 13.15vh;
     background-color: #FBEFC7;
