--- a/src/main/resources/static/css/headerIfooter.css
+++ b/src/main/resources/static/css/headerIfooter.css
@@ -70,13 +70,19 @@ body {
 }
 
 .heart-container, .user-container, .heart-login-container, .user-login-container {
+
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
     cursor: pointer;
     border: none;
-    background-color: #F2E3B3;
+    background-color: #f2b3d0;
+}
+
+.heart-container, .user-container {
+    width: 4.6vw;
+    height: 9.2593vh;
 }
 
 .user-container:hover {
@@ -200,7 +206,7 @@ body {
     left: 2vw;
     top: 1vh;
     background-color: #F2E3B3;
-    width: 10vw;
+    width: 10.5vw;
     height: 5vh;
     border: none;
     border-radius: 5vh;
@@ -217,7 +223,7 @@ body {
     right: 2vw;
     top: 1vh;
     background-color: #F2E3B3;
-    width: 10vw;
+    width: 10.5vw;
     height: 5vh;
     border: none;
     border-radius: 5vh;
